--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "react-chartjs-2": "^5.3.0",
+    "serverless-http": "^3.2.0",
     "sonner": "^2.0.3",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.12.0",
