--- a/package.json
+++ b/package.json
@@ -1,51 +1,16 @@
 {
-  "name": "egseekers-backend",
+  "name": "egseekers-backend-minimal",
   "version": "1.0.0",
-  "description": "Freelance platform API",
-  "main": "server.js",
+  "description": "Minimal backend for EgSeekers",
+  "main": "api/minimal.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "prisma generate",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "seed": "node prisma/seed.js",
-    "test": "jest"
+    "start": "node api/minimal.js",
+    "dev": "node api/minimal.js"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.787.0",
-    "@aws-sdk/s3-request-presigner": "^3.787.0",
-    "@prisma/client": "^6.6.0",
-    "@types/chart.js": "^2.9.41",
-    "axios": "^1.8.4",
-    "bcryptjs": "^3.0.2",
-    "chart.js": "^4.4.9",
-    "cloudinary": "^2.6.0",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.5.0",
-    "express-validator": "^7.2.1",
-    "helmet": "^7.1.0",
-    "joi": "^17.13.3",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.2",
-    "react-chartjs-2": "^5.3.0",
-    "serverless-http": "^3.2.0",
-    "sonner": "^2.0.3",
-    "swagger-ui-express": "^5.0.0",
-    "winston": "^3.12.0",
-    "ws": "^8.16.0"
-  },
-  "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.9",
-    "prisma": "^6.6.0"
-  },
-  "prisma": {
-    "seed": "node prisma/seed.js"
+    "cors": "^2.8.5",
+    "serverless-http": "^3.2.0"
   }
 }
