--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "egseekers-backend-minimal",
+  "name": "egseekers-backend",
   "version": "1.0.0",
-  "description": "Minimal backend for EgSeekers",
-  "main": "api/minimal.js",
+  "description": "Express backend for EgSeekers deployed on Vercel",
+  "main": "api/index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node api/minimal.js",
-    "dev": "node api/minimal.js"
+    "start": "node api/index.js",
+    "dev": "node api/index.js",
+    "build": "echo 'No build step required'"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "serverless-http": "^3.2.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
