--- a/package.json
+++ b/package.json
@@ -1,20 +1,7 @@
 {
-  "name": "egseekers-backend",
+  "name": "egseekers-backend-pure",
   "version": "1.0.0",
-  "description": "Express backend for EgSeekers deployed on Vercel",
-  "main": "api/index.js",
-  "type": "commonjs",
-  "scripts": {
-    "start": "node api/index.js",
-    "dev": "node api/index.js",
-    "build": "echo 'No build step required'"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "serverless-http": "^3.2.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+  "description": "Pure serverless backend for EgSeekers",
+  "main": "api/pure.js",
+  "type": "commonjs"
 }
