--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,8 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/pure.js",
-      "use": "@vercel/node"
+  "functions": {
+    "api/index.js": {
+      "runtime": "nodejs18.x"
     }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/pure.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/api/pure.js"
-    }
-  ]
+  }
 }
