--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "egseekers-backend-universal",
+  "name": "egseekers-backend-full",
   "version": "1.0.0",
-  "description": "Universal backend - works locally and on Vercel",
+  "description": "Full-featured backend for EgSeekers deployed on Vercel",
   "main": "api/index.js",
   "type": "commonjs",
   "scripts": {
@@ -10,8 +10,14 @@
     "local": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@prisma/client": "^6.6.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "serverless-http": "^3.2.0"
   }
 }
