--- a/package.json
+++ b/package.json
@@ -1,23 +1,40 @@
 {
-  "name": "egseekers-backend-full",
+  "name": "egseekers-backend",
   "version": "1.0.0",
-  "description": "Full-featured backend for EgSeekers deployed on Vercel",
-  "main": "api/index.js",
+  "description": "EgSeekers Backend API",
+  "main": "server.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node api/index.js",
-    "dev": "node api/index.js",
-    "local": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "prisma generate",
+    "postinstall": "prisma generate",
+    "prisma:generate": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
     "bcryptjs": "^3.0.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "serverless-http": "^3.2.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.0",
+    "prisma": "^6.6.0",
+    "socket.io": "^4.7.0",
+    "stripe": "^14.0.0",
+    "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.0",
+    "winston": "^3.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
