--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.0.0",
+    "@aws-sdk/s3-request-presigner": "^3.0.0",
     "@prisma/client": "^6.6.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
+    "express-validator": "^7.0.0",
     "helmet": "^7.1.0",
+    "joi": "^17.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
