--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/client-s3": "^3.0.0",
     "@aws-sdk/s3-request-presigner": "^3.0.0",
     "@prisma/client": "^6.6.0",
+    "axios": "^1.6.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.0.0",
     "compression": "^1.7.4",
@@ -34,7 +35,8 @@
     "stripe": "^14.0.0",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.0",
-    "winston": "^3.10.0"
+    "winston": "^3.10.0",
+    "ws": "^8.14.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
