--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "prisma generate",
-    "postinstall": "prisma generate",
-    "prisma:generate": "prisma generate"
+    "build": "npx prisma generate",
+    "postinstall": "npx prisma generate",
+    "prisma:generate": "prisma generate",
+    "deploy": "npx prisma db push"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.0.0",
