--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: egseekers-backend
     env: node
     plan: starter
-    buildCommand: npm install && npx prisma generate
+    buildCommand: npm install && npx prisma generate && npx prisma db push
     startCommand: npm start
     envVars:
       - key: NODE_ENV
