--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.0",
     "nodemailer": "^6.9.0",
     "prisma": "^6.6.0",
     "socket.io": "^4.7.0",
