--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "express-validator": "^7.0.0",
     "helmet": "^7.1.0",
     "joi": "^17.0.0",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
@@ -44,6 +44,6 @@
     "nodemon": "^3.0.0"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0 <25.0.0"
   }
 }
