--- a/.env
+++ b/.env
@@ -2,7 +2,11 @@
 # DATABASE CONFIGURATION
 # ============================================
 DATABASE_URL=mysql://avnadmin:AVNS_QkfL2UuF6FN8fzJOv_p@hazem-hazemosama2553-256a.b.aivencloud.com:11706/defaultdb?ssl-mode=REQUIRED
-
+DB_HOST=hazem-hazemosama2553-256a.b.aivencloud.com
+DB_PORT=11706
+DB_USER=avnadmin
+DB_PASSWORD=AVNS_QkfL2UuF6FN8fzJOv_p
+DB_DATABASE=defaultdb
 # ============================================
 # SERVER CONFIGURATION
 # ============================================
